Fix node template

--- a/spec/files/tree.yml
+++ b/spec/files/tree.yml
@@ -38,10 +38,10 @@ tags:
   5: collections
   6: events
   7: collaborations
-  8: winter 2015
-  9: spring 2015
-  10: summer 2015
-  11: afro jack
-  12: pr.co
-  13: lowlands 2014
-  14: sinterklaas 2014
+  8: winter_2015
+  9: spring_2015
+  10: summer_2015
+  11: afro_jack
+  12: pr_co
+  13: lowlands_2014
+  14: sinterklaas_2014
